solved mobi horizontal scroll

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -93,7 +93,6 @@
 
   .mobile {
     display: none;
-    ;
   }
 }
 
@@ -120,6 +119,6 @@
   }
 
   .mobile {
-    display: block!important;
+    display: block;
   }
 }
