--- a/src/pages/ClinicPage/ClinicPage.scss
+++ b/src/pages/ClinicPage/ClinicPage.scss
@@ -374,7 +374,7 @@
 
         }
 
-        .mobi {
+        .mobile{
             display: block;
 
             .header-container {
@@ -454,11 +454,6 @@
                 display: none;
             }
         }
-    }
-
-    .clinic-filter-container {
-        max-width: 85vw;
-
     }
 
     .home-page {
